added the href attribute to button block: when this attribute is filled up, the button is rendered as a link

--- a/Resources/views/Content/Button/_button_params.html.twig
+++ b/Resources/views/Content/Button/_button_params.html.twig
@@ -5,3 +5,4 @@
 {% set button_text = (data.button_text is defined and data.button_text) ? " " ~ data.button_text : "Click me" %}
 {% set button_block = (data.button_block is defined and data.button_block) ? " " ~ data.button_block : "" %}
 {% set button_enabled = (data.button_enabled is defined and data.button_enabled) ? " " ~ data.button_enabled : "" %}
+{% set button_href = (data.button_href is defined and data.button_href) ? data.button_href : "" %}
