--- a/Resources/views/Content/Button/button.html.twig
+++ b/Resources/views/Content/Button/button.html.twig
@@ -1,5 +1,9 @@
 {% extends "TwitterBootstrapBundle:Content:Button/_button_params.html.twig" %}
 
 {% block body %}
+{% if button_href == "" %} 
 <button class="btn{{ button_type }}{{ button_attribute }}{{ button_block }}{{ button_enabled }}" {{ editor|raw }}>{{ button_text }}</button>
+{% else %}
+<a href="{{ button_href }}" class="btn{{ button_type }}{{ button_attribute }}{{ button_block }}{{ button_enabled }}" {{ editor|raw }}>{{ button_text }}</a>
+{% endif %}
 {% endblock %}
