--- a/Resources/views/Editor/Button/button_editor.html.twig
+++ b/Resources/views/Editor/Button/button_editor.html.twig
@@ -1,1 +1,1 @@
-{% include "RedKiteCmsBundle:Editor:base_editor_form.html.twig" %}
+{% extends "RedKiteCmsBundle:Editor:base_editor_form.html.twig" %}
