blocks can now be used both with Twitter Bootstrap 2.x and 3.x; updated template files paths due to changes on RedKiteCmsBundle

--- a/Resources/views/Content/Badge/_badge_params.html.twig
+++ b/Resources/views/Content/Badge/_badge_params.html.twig
@@ -1,4 +1,4 @@
-{% extends "RedKiteCmsBundle:Editor:base_editor.html.twig" %}
+{% extends "RedKiteCmsBundle:Block:Editor/_editor.html.twig" %}
 
 {% if data.badge_type is defined and data.badge_type != "" %}
 {% set badge_type = " " ~ data.badge_type %}
