--- a/Resources/views/Content/Button/_button_params.html.twig
+++ b/Resources/views/Content/Button/_button_params.html.twig
@@ -1,6 +1,6 @@
-{% extends "RedKiteCmsBundle:Editor:base_editor.html.twig" %}
+{% extends "RedKiteCmsBundle:Block:Editor/_editor.html.twig" %}
 
-{% set button_type = (data.button_type is defined and data.button_type) ? " " ~ data.button_type : "" %}
+{% set button_type = (data.button_type is defined and data.button_type) ? " " ~ data.button_type : " btn-default" %}
 {% set button_attribute = (data.button_attribute is defined and data.button_attribute) ? " " ~ data.button_attribute : "" %}
 {% set button_text = (data.button_text is defined and data.button_text) ? " " ~ data.button_text : "Click me" %}
 {% set button_block = (data.button_block is defined and data.button_block) ? " " ~ data.button_block : "" %}
