--- a/Resources/views/Content/DropdownButton/dropdown_button.html.twig
+++ b/Resources/views/Content/DropdownButton/dropdown_button.html.twig
@@ -7,7 +7,7 @@
         <span class="caret"></span>
     </a>
     <ul class="dropdown-menu{{ button_dropup_right }}">
-        {% include "TwitterBootstrapBundle:Editor:DropdownButton/_dropdown_items.html.twig" with {'items': data.items} %}
+        {% include "TwitterBootstrapBundle:Content:DropdownButton/_dropdown_items.html.twig" with {'items': data.items} %}
     </ul>
 </div>
 {% endblock %}
