--- a/Resources/views/Editor/Slider/item.html.twig
+++ b/Resources/views/Editor/Slider/item.html.twig
@@ -1,4 +1,4 @@
-{% extends "RedKiteCmsBundle:Item:_item.html.twig" %}
+{% extends "RedKiteCmsBundle:Block:Editor/Item/_item.html.twig" %}
 
 {% block commands %}
 <input id="al_add_item" type="submit" class="btn" value="New" />
