refactored toolbar block and added text and button included blocks

--- a/Resources/views/Content/Navbar/Dropdown/navbar_dropdown_button.html.twig
+++ b/Resources/views/Content/Navbar/Dropdown/navbar_dropdown_button.html.twig
@@ -1,7 +1,7 @@
 {% extends "TwitterBootstrapBundle:Content:DropdownButton/_dropdown_button_params.html.twig" %}
 
 {% block body %}
-<li class="dropdown" {{ editor|raw }}>
+<li class="dropdown al-navbar-menu-list" {{ editor|raw }}>
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
         {{ button_text }}
         <span class="caret"></span>
