--- a/Resources/views/Editor/DropdownButton/dropdown_editor.html.twig
+++ b/Resources/views/Editor/DropdownButton/dropdown_editor.html.twig
@@ -1,5 +1,6 @@
 {% extends "RedKiteCmsBundle:Block:Editor/_editor_form.html.twig" %}
 {% block editor %}
+<div><h3>Attributes</h3></div>
 {{ parent() }}
 <div><h3>Items</h3></div>
 <div class="dropdown-menu-items-container">
