--- a/Resources/views/Content/Slider/3.x/content.html.twig
+++ b/Resources/views/Content/Slider/3.x/content.html.twig
@@ -1,7 +1,7 @@
 {% extends "RedKiteCmsBundle:Block:Editor/_editor.html.twig" %}
 
 {% if carousel_id is not defined or carousel_id == "" %}
-{% set carousel_id = "alphalemon-carousel" %}
+{% set carousel_id = "rk-carousel" %}
 {% endif %}
 
 {% block body %}
