--- a/Resources/views/Content/Navbar/Navbar/3.x/navbar.html.twig
+++ b/Resources/views/Content/Navbar/Navbar/3.x/navbar.html.twig
@@ -8,8 +8,8 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse"> 
         {% for key, item in navbar.items %}
-            {% set baseKey = block_manager.get.getId ~ "-" ~ key %}    
-            {{ renderIncludedBlock(baseKey, block_manager, item.blockType, true, '', 'data-item=' ~ key) }}    
+            {% set baseKey = block_manager.get.getId ~ "-" ~ key %}
+            {{ renderIncludedBlock(baseKey, block_manager, item.blockType, true, '', 'data-hide-blocks-menu=true data-item=' ~ key) }}    
         {% endfor %}
     </div>
 </nav>
