--- a/Resources/views/Editor/Slider/item.html.twig
+++ b/Resources/views/Editor/Slider/item.html.twig
@@ -1,7 +1,6 @@
 {% extends "RedKiteCmsBundle:Block:Editor/Item/_item.html.twig" %}
 
 {% block commands %}
-<input id="al_add_item" type="submit" class="btn" value="New" />
-<input id="al_delete_item" type="submit" class="btn" value="Delete" />
+<input id="al_add_item" type="submit" class="btn btn-default" value="New" />
 <input id="al_save_item" type="submit" class="btn btn-primary" value="Save" />
 {% endblock %}
