--- a/Resources/views/Editor/Navbar/Navbar/navbar_editor.html.twig
+++ b/Resources/views/Editor/Navbar/Navbar/navbar_editor.html.twig
@@ -5,6 +5,6 @@
 {{ parent() }}
 </div>
 <div>
-    <a href="#" class="al-edit-item">Edit items<a>
+    <a href="#" class="al-edit-item">{{ "common_edit_items"|trans({}, 'TwitterBootstrapBundle', cms_language) }}<a>
 </div>
 {% endblock %}
