--- a/Resources/views/Content/Accordion/2.x/accordion.html.twig
+++ b/Resources/views/Content/Accordion/2.x/accordion.html.twig
@@ -1,26 +1,11 @@
 {% extends "RedKiteCmsBundle:Block:Editor/_editor.html.twig" %}
 
 {% block body %}
-<div class="accordion al-accordion-list" id="al-accordion" {{ editor|raw }}>
+<div class="accordion al-accordion-list inline-list" id="al-accordion" {{ editor|raw }}>
     {% for key, item in items %}
     {% set baseSlotName = block_manager.get.getId ~ "-" ~ key %} 
-    <div class="accordion-group"{% if block_manager.getEditorDisabled == false %} data-item="{{ key }}" data-slot-name="{{ baseSlotName }}"{% endif %}>
-        {% set baseKey = baseSlotName ~ "-" ~ key %}  
-        <div class="accordion-heading">
-            <h4>
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#al-accordion" href="#item{{ key }}">
-                    {% set blockSlotName = baseKey ~ "0" %}  
-                    {{ renderIncludedBlock(blockSlotName, block_manager, "Text", true, '', 'data-hide-blocks-menu=true') }}
-                </a>
-            </h4>
-        </div>
-        <div id="item{{ key }}" class="accordion-body collapse{% if key == 0 %} in{% endif %}">
-            <div class="accordion-inner">
-                {% set blockSlotName = baseKey ~ "1" %}  
-                {{ renderIncludedBlock(blockSlotName, block_manager, "Text", true, '', 'data-hide-blocks-menu=true') }}
-            </div>
-        </div>
-    </div>
+    {% set attributes = 'data-item=' ~ key ~ ' data-slot-name=' ~ baseSlotName %}
+    {{ renderIncludedBlock(baseSlotName, block_manager, 'BootstrapAccordionPanelBlock', true, "", attributes) }}  
     {% endfor %}
 </div>
 {% endblock %}
