--- a/Resources/views/Content/PageHeader/page_header.html.twig
+++ b/Resources/views/Content/PageHeader/page_header.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
 <div class="page-header" {{ editor|raw }}>
-<{{ data.page_header_tag }}>{{ data.page_header_title }}<small>{{ data.page_header_subtitle }}</small></{{ data.page_header_tag }}>
+    <{{ data.page_header_tag }}>
+        {{ data.page_header_title }}
+        <small>{{ data.page_header_subtitle }}</small>
+    </{{ data.page_header_tag }}>
 </div>
 {% endblock %}
