--- a/Resources/views/Content/Navbar/Navbar/3.x/navbar.html.twig
+++ b/Resources/views/Content/Navbar/Navbar/3.x/navbar.html.twig
@@ -3,6 +3,12 @@
 {% block body %}
 <nav class="navbar navbar-default {{ navbar.position}} {{ navbar.inverted}}" {{ editor|raw }} role="navigation">
     <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         {% set baseKey = block_manager.get.getId ~ "-brand" %}            
         <a class="navbar-brand" href="#">{{ renderIncludedBlock(baseKey, block_manager, 'Text', true, 'Brand') }}</a>
     </div>
